# jkbd

./: pyproject.toml  readme.md
pkg/: PKGBUILD
src/jkbd/: __main__.py  controller.py  log.py
usr/lib/systemd/system/: jkbd.service
