[project]
name = "jkbd"
version = "0.0.1"
authors = [
  { name="Kapenekakis Antheas", email="pypi@antheas.dev" },
]
description = "JKBD: Joystick to Keyboard service. Converts joysticks into a keyboard device."
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
  "rich>=13.5.2",
  "evdev>=1.6.0",
]

[project.urls]
"Homepage" = "https://github.com/hhd-dev/jkbd"
"Bug Tracker" = "https://github.com/hhd-dev/jkbd/issues"

[project.entry-points."console_scripts"]
jkbd = "jkbd.__main__:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["jkbd*"]  # package names should match these glob patterns (["*"] by default)
